minor styling fixes from feedback (page # on page, x button, padding, title shift down), finished up carousel (except delete icon), default story, default title cover, adjust icon size

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -408,3 +408,7 @@ div:hover>.tooltip-text {
     border: 3px solid transparent;
   }
 }
+
+#carousel .slick-dots {
+  bottom: -30px;
+}
